manifest/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
  namespace: traefik-whoami
spec:
  parentRefs:
    - name: lab
      namespace: traefik
  hostnames:
    - argocd.lab.local
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
